cloudformation-template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Task App - EC2 Ubuntu 20.04 + RDS PostgreSQL",

  "Parameters": {
    "KeyName": {
      "Description": "Nombre del KeyPair existente",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "DBMasterPassword": {
      "Description": "Contraseña para PostgreSQL",
      "Type": "String",
      "NoEcho": true,
      "MinLength": 8
    },
    "LatestAmiId": {
      "Description": "Última AMI Ubuntu 20.04",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/canonical/ubuntu/server/focal/stable/current/amd64/hvm/ebs-gp2/ami-id"
    }
  },

  "Resources": {
    "AppSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SG para Task App",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 3000,
            "ToPort": 3000,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },

    "DBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SG para RDS",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 5432,
            "ToPort": 5432,
            "SourceSecurityGroupId": { "Ref": "AppSecurityGroup" }
          }
        ]
      }
    },

    "TaskDatabase": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceIdentifier": "task-app-db",
        "Engine": "postgres",
        "EngineVersion": "12.15",
        "DBInstanceClass": "db.t3.micro",
        "AllocatedStorage": "20",
        "StorageType": "gp2",
        "MasterUsername": "postgres",
        "MasterUserPassword": { "Ref": "DBMasterPassword" },
        "VPCSecurityGroups": [{ "Ref": "DBSecurityGroup" }],
        "BackupRetentionPeriod": 7,
        "MultiAZ": false,
        "PubliclyAccessible": false,
        "DBName": "task_app",
        "Tags": [
          { "Key": "Name", "Value": "task-app-db" }
        ]
      }
    },

    "TaskInstance": {
      "Type": "AWS::EC2::Instance",
      "DependsOn": "TaskDatabase",
      "Properties": {
        "InstanceType": "t2.micro",
        "KeyName": { "Ref": "KeyName" },
        "ImageId": { "Ref": "LatestAmiId" },
        "SecurityGroupIds": [{ "Ref": "AppSecurityGroup" }],
        "Tags": [
          { "Key": "Name", "Value": "task-app-server" }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": "#!/bin/bash\napt-get update\napt-get install -y docker.io docker-compose git curl\nsystemctl start docker\nusermod -aG docker ubuntu\ncd /home/ubuntu\nsudo -u ubuntu git clone https://github.com/Andersonbaltazar/practica4nube.git app\ncd app\ncat > .env << 'EOF'\nNODE_ENV=production\nPORT=3000\nDB_USER=postgres\nDB_PASSWORD=${DBMasterPassword}\nDB_HOST=${TaskDatabase.Endpoint.Address}\nDB_PORT=5432\nDB_NAME=task_app\nSESSION_SECRET=supersecret2024\nEOF\nchown ubuntu:ubunt [...]
          }
        }
      }
    }
  },

  "Outputs": {
    "InstanceId": {
      "Description": "ID de la instancia",
      "Value": { "Ref": "TaskInstance" }
    },
    "PublicIP": {
      "Description": "IP pública - accede aquí",
      "Value": { "Fn::GetAtt": ["TaskInstance", "PublicIp"] }
    },
    "DatabaseEndpoint": {
      "Description": "RDS endpoint",
      "Value": { "Fn::GetAtt": ["TaskDatabase", "Endpoint.Address"] }
    },
    "AppURL": {
      "Description": "URL de la aplicación",
      "Value": { "Fn::Sub": "http://${TaskInstance.PublicIp}:3000" }
    }
  }
}
